--- a/src/main/res/values/styles.xml
+++ b/src/main/res/values/styles.xml
@@ -1,20 +1,20 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
 
-    <style name="None">
-    </style>
+  <style name="None">
+  </style>
 
-    <style name="Theme.Umbrella" parent="Theme.AppCompat.Light.NoActionBar">
-        <item name="android:textColorPrimary">@color/text_color_primary</item>
-        <item name="android:textColorSecondary">@color/text_color_secondary</item>
+  <style name="Theme.Umbrella" parent="Theme.AppCompat.Light.NoActionBar">
+    <item name="android:textColorPrimary">@color/text_color_primary</item>
+    <item name="android:textColorSecondary">@color/text_color_secondary</item>
 
-        <item name="android:windowContentOverlay">@null</item>
-        <item name="android:windowActionBarOverlay">true</item>
-        <item name="android:windowBackground">@color/content_background</item>
+    <item name="android:windowContentOverlay">@null</item>
+    <item name="android:windowActionBarOverlay">true</item>
+    <item name="android:windowBackground">@color/content_background</item>
 
-        <item name="colorAccent">@color/accent</item>
-        <item name="colorPrimary">@color/accent</item>
-        <item name="android:statusBarColor" tools:ignore="NewApi">@color/status_bar</item>
-        <item name="android:windowDrawsSystemBarBackgrounds" tools:ignore="NewApi">true</item>
-    </style>
+    <item name="colorAccent">@color/primary</item>
+    <item name="colorPrimary">@color/primary</item>
+    <item name="android:statusBarColor" tools:ignore="NewApi">@color/status_bar</item>
+    <item name="android:windowDrawsSystemBarBackgrounds" tools:ignore="NewApi">true</item>
+  </style>
 
 </resources>
