--- a/src/main/res/values/styles.xml
+++ b/src/main/res/values/styles.xml
@@ -9,12 +9,22 @@
 
     <item name="android:windowContentOverlay">@null</item>
     <item name="android:windowActionBarOverlay">true</item>
-    <item name="android:windowBackground">@color/content_background</item>
+    <item name="android:windowBackground">@color/primary_2</item>
+    <item name="colorControlHighlight">@color/white</item>
 
     <item name="colorAccent">@color/primary</item>
     <item name="colorPrimary">@color/primary</item>
     <item name="android:statusBarColor" tools:ignore="NewApi">@color/status_bar</item>
     <item name="android:windowDrawsSystemBarBackgrounds" tools:ignore="NewApi">true</item>
+  </style>
+
+  <style name="Theme.Umbrella.FullScreen" parent="Theme.AppCompat.Light.NoActionBar">
+    <item name="android:windowNoTitle">true</item>
+    <item name="android:windowActionBar">false</item>
+    <item name="android:windowFullscreen">true</item>
+    <item name="android:windowContentOverlay">@null</item>
+    <item name="colorControlHighlight">@color/white</item>
+    <item name="android:windowBackground">@color/primary_2</item>
   </style>
 
 </resources>
