tweaking splash page animations

--- a/src/main/res/layout/activity_splash.xml
+++ b/src/main/res/layout/activity_splash.xml
@@ -65,6 +65,7 @@
   <LinearLayout
       android:id="@+id/ll_continue_button"
       android:layout_width="wrap_content"
+      android:alpha="0"
       android:layout_height="wrap_content"
       android:layout_alignParentBottom="true"
       android:layout_alignParentEnd="true"
@@ -92,7 +93,7 @@
         android:id="@+id/iv_arrow_right"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
+        android:layout_gravity="bottom"
         android:contentDescription="@string/cont"
         android:src="@drawable/ic_arrow_right"
         />
