--- a/src/main/res/values/colors.xml
+++ b/src/main/res/values/colors.xml
@@ -19,4 +19,6 @@
   <color name="forecast_card_divider">#ccc</color>
 
   <color name="white">#ffffff</color>
+  <color name="off_white">#d4d4d4</color>
+
 </resources>
