--- a/src/main/res/values/styles.xml
+++ b/src/main/res/values/styles.xml
@@ -10,7 +10,7 @@
     <item name="android:windowContentOverlay">@null</item>
     <item name="android:windowActionBarOverlay">true</item>
     <item name="android:windowBackground">@color/primary_2</item>
-    <item name="colorControlHighlight">@color/white</item>
+    <item name="colorControlHighlight">@color/off_white</item>
 
     <item name="colorAccent">@color/primary</item>
     <item name="colorPrimary">@color/primary</item>
