--- a/src/main/res/layout/activity_home.xml
+++ b/src/main/res/layout/activity_home.xml
@@ -5,6 +5,7 @@
     android:id="@+id/cl_parent"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     android:fitsSystemWindows="true"
     >
   <android.support.v7.widget.Toolbar
