getting adapter setup

--- a/src/main/res/values/colors.xml
+++ b/src/main/res/values/colors.xml
@@ -16,7 +16,7 @@
   <color name="weather_cool">#03a9f4</color>
 
   <!-- Forecast card colors -->
-  <color name="forecast_card_divider">#ccc</color>
+  <color name="forecast_card_divider">#cccccc</color>
 
   <color name="white">#ffffff</color>
   <color name="off_white">#d4d4d4</color>
