--- a/src/main/res/layout/activity_home.xml
+++ b/src/main/res/layout/activity_home.xml
@@ -8,88 +8,100 @@
     android:background="@color/white"
     android:fitsSystemWindows="true"
     >
-  <android.support.v7.widget.Toolbar
-      android:id="@+id/toolbar"
+  <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
-      android:background="@color/weather_warm"
-      android:paddingBottom="@dimen/default_padding"
-      android:paddingTop="@dimen/default_padding"
+      android:orientation="vertical"
       >
-    <LinearLayout
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
+        android:background="@color/weather_warm"
+        android:elevation="12dp"
+        android:paddingBottom="@dimen/default_padding"
+        android:paddingTop="@dimen/default_padding"
         >
-      <RelativeLayout
-          android:id="@+id/rl_title_section"
+      <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
-          android:layout_centerVertical="true"
-          android:layout_marginBottom="@dimen/default_margin"
+          android:orientation="vertical"
           >
-        <TextView
-            android:id="@+id/tv_location"
-            android:layout_width="wrap_content"
+        <RelativeLayout
+            android:id="@+id/rl_title_section"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="@color/white"
-            android:textSize="@dimen/h6"
-            android:visibility="invisible"
-            tools:text="Gretna, NE"
-            />
-
-        <com.nerdery.umbrella.ui.views.RippleImageView
-            android:id="@+id/iv_settings"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
             android:layout_centerVertical="true"
-            android:layout_marginEnd="@dimen/default_margin"
-            android:clickable="true"
-            android:focusable="true"
-            android:src="@drawable/ic_settings"
-            android:tint="@color/white"
-            />
-      </RelativeLayout>
-      <RelativeLayout
-          android:layout_width="match_parent"
-          android:layout_height="wrap_content"
-          >
+            android:layout_marginBottom="@dimen/default_margin"
+            >
+          <TextView
+              android:id="@+id/tv_location"
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:textColor="@color/white"
+              android:textSize="@dimen/h6"
+              android:visibility="invisible"
+              tools:text="Gretna, NE"
+              />
+
+          <com.nerdery.umbrella.ui.views.RippleImageView
+              android:id="@+id/iv_settings"
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:layout_alignParentEnd="true"
+              android:layout_centerVertical="true"
+              android:layout_marginEnd="@dimen/default_margin"
+              android:clickable="true"
+              android:focusable="true"
+              android:src="@drawable/ic_settings"
+              android:tint="@color/white"
+              />
+        </RelativeLayout>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            >
+          <TextView
+              android:id="@+id/tv_temperature"
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:layout_centerInParent="true"
+              android:layout_gravity="center_horizontal"
+              android:textColor="@color/white"
+              android:textSize="@dimen/h3"
+              android:visibility="invisible"
+              tools:text="100"
+              />
+
+          <com.github.ybq.android.spinkit.SpinKitView
+              xmlns:app="http://schemas.android.com/apk/res-auto"
+              android:id="@+id/loading_indicator"
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:layout_centerInParent="true"
+              app:SpinKit_Color="@color/white"
+              style="@style/SpinKitView.Large.DoubleBounce"
+              />
+
+        </RelativeLayout>
         <TextView
-            android:id="@+id/tv_temperature"
+            android:id="@+id/tv_temp_subtitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
             android:layout_gravity="center_horizontal"
             android:textColor="@color/white"
-            android:textSize="@dimen/h3"
+            android:textSize="@dimen/subtitle_1"
             android:visibility="invisible"
-            tools:text="100"
+            tools:text="@string/clear"
             />
 
-        <com.github.ybq.android.spinkit.SpinKitView
-            xmlns:app="http://schemas.android.com/apk/res-auto"
-            android:id="@+id/loading_indicator"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            app:SpinKit_Color="@color/white"
-            style="@style/SpinKitView.Large.DoubleBounce"
-            />
-
-      </RelativeLayout>
-      <TextView
-          android:id="@+id/tv_temp_subtitle"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:layout_gravity="center_horizontal"
-          android:textColor="@color/white"
-          android:textSize="@dimen/subtitle_1"
-          android:visibility="invisible"
-          tools:text="@string/clear"
-          />
-
-    </LinearLayout>
-  </android.support.v7.widget.Toolbar>
+      </LinearLayout>
+    </android.support.v7.widget.Toolbar>
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rv_hourly"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        />
+  </LinearLayout>
 
 </android.support.design.widget.CoordinatorLayout>
