--- a/src/main/res/values/dimens.xml
+++ b/src/main/res/values/dimens.xml
@@ -13,5 +13,6 @@
   <dimen name="button">14sp</dimen>
   <dimen name="caption">14sp</dimen>
   <dimen name="default_margin">16dp</dimen>
+  <dimen name="default_half_margin">8dp</dimen>
   <dimen name="default_padding">16dp</dimen>
 </resources>
