--- a/src/main/res/layout/activity_home.xml
+++ b/src/main/res/layout/activity_home.xml
@@ -5,7 +5,7 @@
     android:id="@+id/cl_parent"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
+    android:background="@color/off_white"
     android:fitsSystemWindows="true"
     >
   <LinearLayout
@@ -97,11 +97,17 @@
 
       </LinearLayout>
     </android.support.v7.widget.Toolbar>
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/rv_hourly"
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/srl_refresh"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        />
+        android:layout_height="wrap_content"
+        >
+      <android.support.v7.widget.RecyclerView
+          android:id="@+id/rv_hourly"
+          android:layout_width="match_parent"
+          android:layout_height="match_parent"
+          />
+    </android.support.v4.widget.SwipeRefreshLayout>
   </LinearLayout>
 
 </android.support.design.widget.CoordinatorLayout>
