--- a/src/main/res/layout/view_hour_condition.xml
+++ b/src/main/res/layout/view_hour_condition.xml
@@ -2,12 +2,11 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
+    android:layout_width="80dp"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="12dp"
-    android:layout_marginEnd="12dp"
     android:background="@color/white"
     android:orientation="vertical"
+    android:padding="4dp"
     >
 
   <TextView
@@ -17,7 +16,7 @@
       android:layout_gravity="center_horizontal"
       android:textColor="@color/text_color_primary"
       android:textSize="@dimen/body_1"
-      tools:text="4:00 PM"
+      tools:text="10:00 PM"
       />
 
   <ImageView
