--- a/src/main/res/layout/activity_home.xml
+++ b/src/main/res/layout/activity_home.xml
@@ -106,6 +106,7 @@
           android:id="@+id/rv_hourly"
           android:layout_width="match_parent"
           android:layout_height="match_parent"
+          android:layout_marginBottom="8dp"
           />
     </android.support.v4.widget.SwipeRefreshLayout>
   </LinearLayout>
