--- a/src/main/res/layout/view_hour_condition.xml
+++ b/src/main/res/layout/view_hour_condition.xml
@@ -21,8 +21,8 @@
 
   <ImageView
       android:id="@+id/iv_image"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
+      android:layout_width="32dp"
+      android:layout_height="32dp"
       android:layout_gravity="center_horizontal"
       android:layout_marginBottom="4dp"
       android:layout_marginTop="4dp"
