--- a/src/main/res/values/styles.xml
+++ b/src/main/res/values/styles.xml
@@ -18,6 +18,16 @@
     <item name="android:windowDrawsSystemBarBackgrounds" tools:ignore="NewApi">true</item>
   </style>
 
+  <style name="Theme.Umbrella.Settings" parent="Theme.AppCompat.Light">
+    <item name="android:textColorPrimary">@color/white</item>
+    <item name="android:textColorSecondary">@color/white</item>
+    <item name="colorControlHighlight">@color/white</item>
+    <item name="colorAccent">@color/gray</item>
+    <item name="colorPrimary">@color/gray</item>
+    <item name="android:statusBarColor" tools:ignore="NewApi">@color/gray</item>
+    <item name="android:windowDrawsSystemBarBackgrounds" tools:ignore="NewApi">true</item>
+  </style>
+
   <style name="Theme.Umbrella.FullScreen" parent="Theme.AppCompat.Light.NoActionBar">
     <item name="android:windowNoTitle">true</item>
     <item name="android:windowActionBar">false</item>
