--- a/src/main/res/values/styles.xml
+++ b/src/main/res/values/styles.xml
@@ -25,7 +25,14 @@
     <item name="colorAccent">@color/gray</item>
     <item name="colorPrimary">@color/gray</item>
     <item name="android:statusBarColor" tools:ignore="NewApi">@color/gray</item>
+    <item name="alertDialogTheme">@style/PrimaryDialogTheme</item>
     <item name="android:windowDrawsSystemBarBackgrounds" tools:ignore="NewApi">true</item>
+  </style>
+
+  <style name="PrimaryDialogTheme" parent="Theme.AppCompat.Light.Dialog.Alert">
+    <item name="android:textColorPrimary">@color/text_color_primary</item>
+    <item name="android:background">@color/off_white</item>
+    <item name="colorAccent">@color/text_color_primary</item>
   </style>
 
   <style name="Theme.Umbrella.FullScreen" parent="Theme.AppCompat.Light.NoActionBar">
