--- a/src/main/res/values/colors.xml
+++ b/src/main/res/values/colors.xml
@@ -21,5 +21,6 @@
   <color name="white">#ffffff</color>
   <color name="off_white">#d4d4d4</color>
   <color name="gray">#969696</color>
+  <color name="dark_gray">#636363</color>
 
 </resources>
